fix: loading JDBC driver for Windows and Linux systems identically